<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Attendance Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_tab1">Tab1Activity</string>
    <string name="title_activity_tab2">Tab2Activity</string>
    <string name="title_activity_tab3">Tab3Activity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="scroll_body_text">Body Text</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_nam">Not a member ?</string>
    <string name="text_attempt">    Attempts :- </string>

</resources>
