<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_background"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/hint_password"
            android:padding="1dp"
            android:src="@drawable/student" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/shape_edit_text"
            android:drawableLeft="@drawable/user"
            android:hint="@string/hint_username"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="5dp"
            android:inputType="textPassword"
            android:background="@drawable/shape_edit_text"
            android:drawableLeft="@drawable/lock"
            android:ems="10"
            android:hint="@string/hint_password"
            android:textColor="@color/colorText" >

        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_button_login"
            android:text="@string/text_login"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_nam"
                android:textColor="@color/colorText" />

            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/text_signup"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/text_attempt"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="1dp"
            android:text=""
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>
